[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "black>=24.10.0",
  "pylint>=3.3.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "toml-sort>=0.24.0",
  "yamllint>=1.35.0",
]
docs = [
  "black>=24.10.0",
  "mkdocs>=1.6.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
]
lab = [
  "ipykernel>=6.29.0",
  "ipympl>=0.9.0",
  "jupyterlab>=4.3.0",
  "matplotlib>=3.10.0",
]

[project]
authors = [
  {name = "Cristina Rea", email = "crea@psfc.mit.edu"},
  {name = "Gregorio L. Trevisan", email = "gtrevisan@psfc.mit.edu"},
  {name = "MIT PSFC Disruption Studies Group", email = "disruption-py@lists.psfc.mit.edu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
]
description = "An open-source physics-based Scientific Framework for Disruption Analysis of Fusion Plasmas for AI/ML applications"
keywords = [
  "plasma physics",
  "nuclear fusion",
  "tokamak",
  "disruptions",
]
license = "MIT"
maintainers = [
  {name = "Gregorio L. Trevisan", email = "gtrevisan@psfc.mit.edu"},
]
name = "disruption-py"
readme = "README.md"
version = "0.10.0"
requires-python = ">=3.11,<4"
dependencies = [
  "dynaconf>=3.2.0",
  "loguru>=0.7.0",
  "numpy>=1.26.0,<2.0.0",
  "pandas[hdf5]>=2.2.0",
  "pyodbc>=5.2.0",
  "scikit_learn>=1.6.0",
  "scipy>=1.15.0",
  "SQLAlchemy>=2.0.0",
  "tqdm>=4.67.0",
]

[project.scripts]
disruption-workflow = "examples.simple:cli"

[project.urls]
documentation = "https://mit-psfc.github.io/disruption-py/"
homepage = "https://disruptions.mit.edu/"
repository = "https://github.com/MIT-PSFC/disruption-py/"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.0"
pytest = "^8.3.0"
ruff = "^0.9.0"
toml-sort = "^0.24.0"
yamllint = "^1.35.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
black = "^25.1.0"
mkdocs = "^1.6.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[tool.poetry.group.lab]
optional = true

[tool.poetry.group.lab.dependencies]
ipykernel = "^6.29.0"
ipympl = "^0.9.0"
jupyterlab = "^4.3.0"
matplotlib = "^3.10.0"

[tool.pylint]
extension-pkg-allow-list = ["pyodbc"]
ignored-modules = ["MDSplus"]
disable = [
  "fixme",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-statements",
]

[tool.uv]
default-groups = []
